language/move-prover/tests/sources/functional/emits.exp
Move prover returns: exiting with boogie verification errors
error: function does not emit the expected event

     ┌── tests/sources/functional/emits.move:112:9 ───
     │
 112 │         emits DummyEvent{msg: 0} to handle;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/emits.move:106: conditional_missing_condition_incorrect
     =         x = <redacted>
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:107: conditional_missing_condition_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:110: conditional_missing_condition_incorrect
     =     at tests/sources/functional/emits.move:112

error: function does not emit the expected event

     ┌── tests/sources/functional/emits.move:151:9 ───
     │
 151 │         emits DummyEvent{msg: 2} to handle;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/emits.move:141: conditional_multiple_incorrect
     =         b = <redacted>
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:142: conditional_multiple_incorrect
     =     at tests/sources/functional/emits.move:143: conditional_multiple_incorrect
     =     at tests/sources/functional/emits.move:144: conditional_multiple_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:147: conditional_multiple_incorrect
     =     at tests/sources/functional/emits.move:149
     =     at tests/sources/functional/emits.move:150
     =     at tests/sources/functional/emits.move:151

error: function does not emit the expected event

     ┌── tests/sources/functional/emits.move:181:9 ───
     │
 181 │         emits DummyEvent{msg: 0} to handle;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/emits.move:171: conditional_multiple_same_incorrect
     =         b = <redacted>
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:172: conditional_multiple_same_incorrect
     =     at tests/sources/functional/emits.move:173: conditional_multiple_same_incorrect
     =     at tests/sources/functional/emits.move:174: conditional_multiple_same_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:177: conditional_multiple_same_incorrect
     =     at tests/sources/functional/emits.move:179
     =     at tests/sources/functional/emits.move:180
     =     at tests/sources/functional/emits.move:181

error: function does not emit the expected event

     ┌── tests/sources/functional/emits.move:103:9 ───
     │
 103 │         emits DummyEvent{msg: 0} to handle if x > 0;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/emits.move:97: conditional_wrong_condition_incorrect
     =         x = <redacted>
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:98: conditional_wrong_condition_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:101: conditional_wrong_condition_incorrect
     =     at tests/sources/functional/emits.move:103

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:54:9 ───
    │
 54 │         emits DummyEvent{msg: 2} to handle;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:47: multiple_incorrect
    =         handle = <redacted>
    =     at tests/sources/functional/emits.move:48: multiple_incorrect
    =     at tests/sources/functional/emits.move:49: multiple_incorrect
    =     at tests/sources/functional/emits.move:49: multiple_incorrect
    =         handle = <redacted>
    =     at tests/sources/functional/emits.move:50: multiple_incorrect
    =     at tests/sources/functional/emits.move:52
    =     at tests/sources/functional/emits.move:53
    =     at tests/sources/functional/emits.move:54

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:71:9 ───
    │
 71 │         emits DummyEvent{msg: 0} to handle;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:66: multiple_same_incorrect
    =         handle = <redacted>
    =     at tests/sources/functional/emits.move:67: multiple_same_incorrect
    =     at tests/sources/functional/emits.move:67: multiple_same_incorrect
    =         handle = <redacted>
    =     at tests/sources/functional/emits.move:68: multiple_same_incorrect
    =     at tests/sources/functional/emits.move:70
    =     at tests/sources/functional/emits.move:71

error: emitted event not covered by any of the `emits` clauses

     ┌── tests/sources/functional/emits.move:296:5 ───
     │
 296 │ ╭     spec fun opaque_completeness_incorrect {
 297 │ │         emits DummyEvent{msg: 0} to handle;
 298 │ │         emits DummyEvent{msg: 7} to handle;
 299 │ │         emits DummyEvent{msg: 1} to handle;
 300 │ │     }
     │ ╰─────^
     │
     =     at tests/sources/functional/emits.move:291: opaque_completeness_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:292: opaque_completeness_incorrect
     =     at tests/sources/functional/emits.move:293: opaque_completeness_incorrect
     =     at tests/sources/functional/emits.move:294: opaque_completeness_incorrect
     =     at tests/sources/functional/emits.move:294: opaque_completeness_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:295: opaque_completeness_incorrect
     =     at tests/sources/functional/emits.move:297
     =     at tests/sources/functional/emits.move:298
     =     at tests/sources/functional/emits.move:299
     =     at tests/sources/functional/emits.move:296

error: function does not emit the expected event

     ┌── tests/sources/functional/emits.move:288:9 ───
     │
 288 │         emits DummyEvent{msg: 2} to handle;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/emits.move:278: opaque_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:279: opaque_incorrect
     =     at tests/sources/functional/emits.move:280: opaque_incorrect
     =     at tests/sources/functional/emits.move:281: opaque_incorrect
     =     at tests/sources/functional/emits.move:281: opaque_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:282: opaque_incorrect
     =     at tests/sources/functional/emits.move:284
     =     at tests/sources/functional/emits.move:285
     =     at tests/sources/functional/emits.move:286
     =     at tests/sources/functional/emits.move:287
     =     at tests/sources/functional/emits.move:288

error: emitted event not covered by any of the `emits` clauses

     ┌── tests/sources/functional/emits.move:337:5 ───
     │
 337 │ ╭     spec fun opaque_partial_incorrect {
 338 │ │         emits DummyEvent{msg: 0} to handle;
 339 │ │         emits DummyEvent{msg: 7} to handle;
 340 │ │         emits DummyEvent{msg: 77} to handle;
 341 │ │         emits DummyEvent{msg: 1} to handle;
 342 │ │         // The completeness check of the `emits` spec of this function should fail.
 343 │ │     }
     │ ╰─────^
     │
     =     at tests/sources/functional/emits.move:332: opaque_partial_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:333: opaque_partial_incorrect
     =     at tests/sources/functional/emits.move:334: opaque_partial_incorrect
     =     at tests/sources/functional/emits.move:335: opaque_partial_incorrect
     =     at tests/sources/functional/emits.move:335: opaque_partial_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:336: opaque_partial_incorrect
     =     at tests/sources/functional/emits.move:338
     =     at tests/sources/functional/emits.move:339
     =     at tests/sources/functional/emits.move:340
     =     at tests/sources/functional/emits.move:341
     =     at tests/sources/functional/emits.move:337

error: emitted event not covered by any of the `emits` clauses

     ┌── tests/sources/functional/emits.move:227:5 ───
     │
 227 │ ╭     spec fun partial_incorrect {
 228 │ │         emits DummyEvent{msg: 0} to handle;
 229 │ │     }
     │ ╰─────^
     │
     =     at tests/sources/functional/emits.move:223: partial_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:224: partial_incorrect
     =     at tests/sources/functional/emits.move:225: partial_incorrect
     =     at tests/sources/functional/emits.move:225: partial_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:226: partial_incorrect
     =     at tests/sources/functional/emits.move:228
     =     at tests/sources/functional/emits.move:227

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:30:9 ───
    │
 30 │         emits DummyEvent{msg: 0} to _handle2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:26: simple_wrong_handle_incorrect
    =         handle = <redacted>
    =         _handle2 = <redacted>
    =     at tests/sources/functional/emits.move:27: simple_wrong_handle_incorrect
    =     at tests/sources/functional/emits.move:27: simple_wrong_handle_incorrect
    =         handle = <redacted>
    =         _handle2 = <redacted>
    =     at tests/sources/functional/emits.move:28: simple_wrong_handle_incorrect
    =     at tests/sources/functional/emits.move:30

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:23:9 ───
    │
 23 │         emits DummyEvent{msg: 1} to handle;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:19: simple_wrong_msg_incorrect
    =         handle = <redacted>
    =     at tests/sources/functional/emits.move:20: simple_wrong_msg_incorrect
    =     at tests/sources/functional/emits.move:20: simple_wrong_msg_incorrect
    =         handle = <redacted>
    =     at tests/sources/functional/emits.move:21: simple_wrong_msg_incorrect
    =     at tests/sources/functional/emits.move:23

error: emitted event not covered by any of the `emits` clauses

     ┌── tests/sources/functional/emits.move:247:5 ───
     │
 247 │ ╭     spec fun strict_incorrect {
 248 │ │         pragma emits_is_strict;
 249 │ │     }
     │ ╰─────^
     │
     =     at tests/sources/functional/emits.move:243: strict_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:244: strict_incorrect
     =     at tests/sources/functional/emits.move:245: strict_incorrect
     =     at tests/sources/functional/emits.move:245: strict_incorrect
     =         handle = <redacted>
     =     at tests/sources/functional/emits.move:246: strict_incorrect
     =     at tests/sources/functional/emits.move:247
